--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,20 +1,38 @@
 ---
 driver:
-  name: vagrant
+  #name: vagrant
+  name: dokken
+  chef_version: latest
+  privileged: true
+
+
+transport:
+  name: dokken
 
 provisioner:
-  name: chef_zero
+  #name: chef_zero
+  name: dokken
+  client_rb:
+    chef_license: accept
   # You may wish to disable always updating cookbooks in CI or other testing environments.
   # For example:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
-  always_update_cookbooks: true
+  #always_update_cookbooks: true
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: centos-7
+  #- name: ubuntu-16.04
+  #- name: centos
+  - name: centos73
+    driver:
+      image: centos:7.3.1611
+      pid_one_command: /usr/lib/systemd/systemd
+      intermediate_instructions:
+        - RUN yum -y install lsof which systemd-sysv initscripts net-tools
+      ports:
+         - 9080:80
 
 suites:
   - name: default
