--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ services: docker
 
 before_script:
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
+  - export CHEF_LICENSE=accept
   - /opt/chefdk/embedded/bin/chef --version
 
 script: /opt/chefdk/embedded/bin/kitchen verify
@@ -23,5 +24,6 @@ matrix:
       - eval "$(/opt/chefdk/bin/chef shell-init bash)"
       - /opt/chefdk/embedded/bin/chef --version
       - /opt/chefdk/embedded/bin/cookstyle --version
+      - export CHEF_LICENSE=accept
     - script:
       - /opt/chefdk/bin/chef exec cookstyle
